src/objects/CommonReports__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CommonReports</label>
</CustomObject>